crates/kdl-config-derive/tests/ui/positional_non_int.stderr
error: expected integer or "rest"/"*", got "foo"
 --> tests/ui/positional_non_int.rs:5:30
  |
5 |     #[kdl(attr, positional = "foo")]
  |                              ^^^^^
